welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:1: error: not found: value orange
orange = 0;
^RunHalf:2: error: not found: value biscuit
biscuit = 0;
^RunHalf:3: error: not found: value biscuit
while (2*biscuit != orange + 1){
         ^RunHalf:3: error: not found: value orange
while (2*biscuit != orange + 1){
                    ^RunHalf:6: error: not found: value orange
    orange = orange + 1
    ^RunHalf:9: error: not found: value biscuit
    biscuit = biscuit + 1
    ^